# fex-emu-rootfs-generator

./: Cargo.toml  LICENSE  Makefile  README.md  fex-emu-rootfs-generator.sh
src/: main.rs
